--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,29 @@
 !歓楽街チュートリアル2.rpgmvp
 !歓楽街チュートリアル3.rpgmvp
 !歓楽街チュートリアル4.rpgmvp
+!かんばんやおや.rpgmvp
+!カンバンイーブル.rpgmvp
+!カンバンウミ家.rpgmvp
+!カンバンシフの隠れ家.rpgmvp
+!カンバンバニー.rpgmvp
+!カンバンバンカ.rpgmvp
+!カンバンフタナリ.rpgmvp
+!カンバン回想部屋.rpgmvp
+!カンバン宿屋.rpgmvp
+!カンバン手コキ.rpgmvp
+!カンバン教会.rpgmvp
+!カンバン族長家.rpgmvp
+!カンバン本屋.rpgmvp
+!カンバン武器屋.rpgmvp
+!カンバン母乳.rpgmvp
+!カンバン牢屋.rpgmvp
+!カンバン犬.rpgmvp
+!カンバン猫.rpgmvp
+!カンバン祭壇.rpgmvp
+!カンバン調合.rpgmvp
+!カンバン豚.rpgmvp
+!カンバン足コキ.rpgmvp
+!カンバン道具屋.rpgmvp
+!カンバン道具屋ポソ.rpgmvp
+!カンバン酒場.rpgmvp
+!カンバン魔物.rpgmvp
